# celf_motr

./: .gitignore  README.md  diag_coverage.py  diag_division_scores.py  enginev2.py  eval_bft.py  eval_cell.py  eval_cell_detect_only.py  eval_cell_no_div.py  eval_dance.py  eval_division.py  eval_sportsmot.py  eval_wat.py  main.py  pyproject.toml  run.sub  run_bft.sub  run_dance.sub  run_eval.sub  run_mot17.sub  run_v2.sub  run_wat.sub  selfmotr_environment.yml  selfmotr_requirements.txt  selfmotr_requirements_cluster.txt  submit_dance.py  submit_mot17.py  submit_sportsmot.py  test.py  train_bft.py  train_cell.py  train_cell_no_div.py  train_dance.py  train_mot17.py  train_sportsMOT.py  train_wat.py  viz_cell.py  viz_ctc_results.py
ablation/: eval_dance_layer_ablation.py  eval_dance_light.py  eval_detect_no_trackquery.py  eval_detect_with_trackquery.py  submit_dance_layer_ablation.py  submit_dance_light.py
conda_envs/: cuda128.yaml  cuda128_sm61.yaml  cuda130.yaml  set_cuda_path.sh  setup_cuda_scripts.sh  unset_cuda_path.sh
datasets/: __init__.py  bft.py  ctc_cell.py  ctc_cell_no_div.py  dance_det.py  dancev2.py  dancev2_final.py  joint.py  sportsmot.py  sportsmotv2.py  transformsv2.py  wat.py
models/: __init__.py  deformable_detrv2_det.py  deformable_transformer_plusv2.py  motrv2_self.py  motrv2_self_no_div.py  qimv2.py
tools/: check_encoder_cache_parity.py  check_encoder_cache_training_smoke.py  coco_eval.py  convert.sh  convert_txt_to_json.py
util/: bft_convert.py  box_ops.py  eval_b.py  eval_d.py  eval_s.py  eval_w.py  misc.py  tool.py
(+53 files in other folders)
