[project]
name = "selfmotr-pilot-henning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cython>=3.2.4",
    "lap>=0.5.13",
    "motmetrics>=1.4.0",
    "opencv-python>=4.13.0.92",
    "pycocotools>=2.0.11",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
torch = { index = "torch" }
torchvision = { index = "torch" }

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
